--- a/package.json
+++ b/package.json
@@ -3,17 +3,21 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "nmon": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
     "express": "~4.16.1",
-    "express-validator": "^7.1.0",
+    "express-validator": "^7.2.0",
+    "helmet": "^7.1.0",
     "moment": "^2.30.1",
     "mongoose": "^8.5.2",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "uid2": "^1.0.0"
   }
 }
