add load key for load data authorization

--- a/env.example
+++ b/env.example
@@ -1,5 +1,6 @@
 MONGODB_CONNECTION_STRING="mongodb+srv://username:password@host/lessBackMagasin"
-LOAD_PRODUCT="TRUE"
+LOAD_PRODUCT="FALSE"
+LOAD_AUTH_KEY="YOUR LOAD KEY"
 PRODUCTS_FILE_NAME="produits.json"
 ENSEIGNES_FILE_NAME="enseignes.json"
 
